Save hardware configuration, enable http traffic to LAN

--- a/AndroidApp/app/src/main/res/xml/network_security_config.xml
+++ b/AndroidApp/app/src/main/res/xml/network_security_config.xml
@@ -2,5 +2,12 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">weather.s-b-x.com</domain>
+        <!-- Allow cleartext traffic to LAN -->
+        <!-- https://www.iana.org/assignments/special-use-domain-names/special-use-domain-names.xhtml -->
+        <domain includeSubdomains="true">home.arpa</domain>
+        <domain includeSubdomains="true">local</domain>
+        <domain includeSubdomains="true">test</domain>
+        <domain includeSubdomains="true">localhost</domain>
+        <domain includeSubdomains="true">127.0.0.1</domain>
     </domain-config>
 </network-security-config>
